--- a/Image Processing/packages.config
+++ b/Image Processing/packages.config
@@ -8,4 +8,5 @@
   <package id="EvilDICOM" version="1.5.1.7" targetFramework="net452" />
   <package id="OpenTK" version="1.1.2349.61993" targetFramework="net452" />
   <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net452" />
+  <package id="System.ComponentModel.Annotations" version="4.3.0" targetFramework="net452" />
 </packages>
