--- a/ImageProcessing2/ImageProcessing2.csproj
+++ b/ImageProcessing2/ImageProcessing2.csproj
@@ -58,6 +58,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\MatrixHelper.cs" />
+    <Compile Include="Common\Image.cs" />
+    <Compile Include="Common\DicomImageProvider.cs" />
+    <Compile Include="Common\Prompt.cs" />
     <Compile Include="Common\RgbImage.cs" />
     <Compile Include="Common\RgbImageProvider.cs" />
     <Compile Include="MainForm.cs">
