--- a/ImageProcessing2/ImageProcessing2.csproj
+++ b/ImageProcessing2/ImageProcessing2.csproj
@@ -58,8 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\RgbImage.cs" />
-    <Compile Include="Common\RgbImageProvider.cs" />
+    <Compile Include="Common\Image.cs" />
+    <Compile Include="Common\DicomImageLoader.cs" />
+    <Compile Include="Common\ImageProvider.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
