--- a/ImageProcessing2/ImageProcessing2.csproj
+++ b/ImageProcessing2/ImageProcessing2.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Common\Image.cs" />
     <Compile Include="Common\DicomImageLoader.cs" />
     <Compile Include="Common\ImageProvider.cs" />
+    <Compile Include="Common\ImageProvider.Lab4.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
